src/Buyer/components/Buy/BySupplier/bysupplier.module.css
.Maincontainer {
    display: flex;
    flex-direction: column;
    gap: 20px;
}

ul {
    text-decoration: none !important;
    list-style: none !important;
}

/* Style the filter section */
.filterContainer {
    background: linear-gradient(270deg, #00dcff, #0075ce);
    color: #fff;
    padding: 12px;
    position: relative;
    display: flex;
    justify-content: center;
    gap: 20px;
}

.filterSection {
    display: flex;
    justify-content: center;
    margin-bottom: 0px !important;
    gap: 3rem;
    padding-left: 0px !important;
    width: 100%;
}

.filterLiSection {
    font-size: 16px;
    font-weight: 500;
    cursor: pointer !important;
}

.resetButton {
    border: 1px solid #d3d3d3;
    border-radius: 4px;
    cursor: pointer !important;
    display: flex;
    background-color: transparent;
    color: #fff;
    font-size: 14px;
    font-weight: 500;
    justify-content: center;
    padding: 0;
    width: 100px;
}

.filterInnerSection {
    background-color: #fff;
    border-radius: 2px;
    box-shadow: 0 2px 5px -1px #32325d40, 0 1px 3px -1px #0000004d !important;
    color: #5e676f;
    display: flex;
    flex-direction: column;
    font-size: 14px;
    padding: 14px;
    padding-left: 14px !important;
    position: absolute;
    row-gap: 12px;
    top: 90%;
    width: 250px;
    height: 150px;
    cursor: pointer !important;
    overflow: scroll;
}

.filterInnerSection::-webkit-scrollbar {
    display: none;
}

.filterInnerSection li,
.filterLiSection svg {
    cursor: pointer !important;
}

/* End the filter section */



/* Style Card Container */
.cardMainContainer {
    display: flex;
    flex-direction: column;
    gap: 20px;
    margin-bottom: 26rem;
}

.cardContentContainer {
    display: flex
    ;
        flex-direction: column;
        gap: 4px;
        width: 80%;
}

.cardContainer {
    display: flex;
    justify-content: start;
    flex-wrap: wrap;
    gap: 20px;
}

.cardSection {
    background-color: #fff;
    border-radius: 4px;
    box-shadow: 0 2px 5px -1px #32325d40, 0 1px 3px -1px #0000004d !important;
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 20px;
    padding: 20px 24px;
    width: 100%;
}

.headSection {
    display: flex;
        align-items: center;
        justify-content: start;
        gap: 10px;
        width: 80%;
}

.cardHeading {
    font-size: 24px;
    font-weight: 500;
}

.cardLogo {
    width: 80px;
    height: 80px;
    display: flex;
    justify-content: center;
}

.cardLogo img {
    width: 100%;
    height: auto;
}

.cardContentSection {
    display: flex;
        flex-direction: column;
        width: 30%;
        min-width: 130px;
}

.cardHead {
    font-size: 14px;
    font-weight: 500;
}

.cardText {
    -webkit-line-clamp: 3;
    -webkit-box-orient: vertical;
    display: -webkit-box;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: normal;
    font-size: 14px;
    font-weight: 400;

}

.cardInnerContainer {
    display: flex;
    gap: 20px;
}

.cardButton {
    background: linear-gradient(270deg, #00dcff, #0075ce);
    border-radius: 4px;
    color: #fff;
    column-gap: 8px;
    cursor: pointer !important;
    display: flex;
    font-size: 14px;
    padding: 6px 16px;
    outline: none !important;
    border: none !important;
    cursor: pointer !important;
}

.noData {
    background-color: #fff;
    border-radius: 4px;
    box-shadow: 0 2px 5px -1px #32325d40, 0 1px 3px -1px #0000004d !important;
    display: flex;
    align-items: center;
    gap: 30px;
    padding: 24px 32px;
    width: 100%;
    font-size: 16px;
    font-weight: 500;
}
.ButtonContainer{
    width: 110px;
    min-width: 104px;
}
/* End Card Container */
@media screen and (max-width: 1420px) {
    .cardSection {
        padding: 20px;
        width: 100%;
    }
}

@media screen and (max-width: 991px) {

    .cardSection {
        width: 98%;
    }

    .searchInput {
        width: 50vw;
    }
}

